# DREAMPlace

./: report.md
dreamplace/: EvalMetrics.py  NonLinearPlace.py  PlaceObj.py
dreamplace/ops/adjust_node_area/: adjust_node_area.py
dreamplace/ops/density_map/: density_map.py
dreamplace/ops/ml_congestion/: CMakeLists.txt  ml_congestion.py
dreamplace/ops/ml_congestion/models/: build_dataset.py  dataloader.py  experiment.ipynb  main.py  test.sh  train.sh  utils.py
dreamplace/ops/ml_congestion/models/.ipynb_checkpoints/: experiment-checkpoint.ipynb
dreamplace/ops/ml_congestion/models/work_dir/routenet/: arg.json  model_iters_10000.pth  model_iters_20000.pth
test/mlcong/: mgc_des_perf_a.json  mgc_des_perf_b.json  mgc_edit_dist_a.json  mgc_fft_a.json  mgc_fft_b.json  mgc_matrix_mult_a.json  mgc_matrix_mult_b.json  mgc_matrix_mult_c.json  mgc_pci_bridge32_a.json  mgc_pci_bridge32_b.json  mgc_superblue11_a.json  mgc_superblue12.json  mgc_superblue14.json  mgc_superblue16_a.json  mgc_superblue19.json
